# samples

./: .bazelignore  .bazelrc  MODULE.bazel  samples.code-workspace
absl/: BUILD  hello.cc  hello_main.cc  hello_test.cc
helloworld/: BUILD  helloworld_main.cc
