"""Module definitions."""

module(name = "samples")

bazel_dep(
    name = "abseil-cpp",
    version = "20240116.0",
)

bazel_dep(
    name = "googletest",
    version = "1.14.0",
)

bazel_dep(
    name = "toolchains_llvm",
    version = "0.10.3",
)

# Configure and register the toolchain.
llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm")
llvm.toolchain(
    llvm_version = "14.0.0",
)

use_repo(llvm, "llvm_toolchain")
# use_repo(llvm, "llvm_toolchain_llvm") # if you depend on specific tools in scripts

register_toolchains("@llvm_toolchain//:all")
